ruta unificada que devuelve los estados y tipos de hogar

--- a/locales/en.json
+++ b/locales/en.json
@@ -84,7 +84,7 @@
       "name": "Out of Stock",
       "description": "Products that are out of stock"
     },
-    "Active": {
+    "Activa": {
       "name": "Active",
       "description": "The house is in use and functioning normally"
     },
