--- a/locales/pt.json
+++ b/locales/pt.json
@@ -84,7 +84,7 @@
       "name": "Esgotado",
       "description": "Produtos que estão esgotados"
     },
-    "Ativa": {
+    "Activa": {
       "name": "Ativa",
       "description": "A casa está em uso e funcionando normalmente"
     },
