--- a/locales/es.json
+++ b/locales/es.json
@@ -109,6 +109,9 @@
     },
     "Anual": {
       "name": "Anual"
+    },
+    "No se repite": {
+      "name": "No se repite"
     }
   },
   "homeType":{
@@ -158,5 +161,13 @@
       "description": "Productos para la cocina",
       "location": "Entrando a la casa a la izquierda"
     }
-  }  
+  },
+  "typetask": {
+    "Tarea": {
+      "name": "Tarea"
+    },
+    "Evento": {
+      "name": "Evento"
+    }
+  } 
 }
