Correcciones en task

--- a/locales/en.json
+++ b/locales/en.json
@@ -148,6 +148,10 @@
     "Colaborador": {
       "name": "Collaborator",
       "description": "Task collaborator"
+    },
+    "Creador": {
+      "name": "Creator",
+      "description": "Task Creator"
     }
   },
   "warehouse": {
