--- a/locales/pt.json
+++ b/locales/pt.json
@@ -173,5 +173,13 @@
   "Evento": {
     "name": "Evento"
   }
+},
+"finances": {
+  "Personal": {
+    "name": "Pessoal"
+  },
+  "Hogar": {
+    "name": "Lar"
+  }
 }
 }
